[package]
name = "desktopd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
futures = "0.3.28"
gio = "0.17.9"
hyper = "0.14.26"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
utils = { path = "../utils" }
thiserror = "1.0.40"
dotenv = "0.15.0"

[dev-dependencies]
reqwest = "0.11.18"
